# aios

./: .coverage  .gitignore  2026世界杯投注记录.md  AGENTS.md  AIOS-转发版.md  ALL_SKILLS_INSTALLATION_REPORT.md  ARCHIVE_DELIVERY.md  BACKUP_CHECKLIST.md  CHANGELOG.md  COLLAB_PROTOCOL.md  CURRENT_FOCUS.md  DAILY_REPORT_2026-02-26.md  HEARTBEAT.md  IDENTITY.md  INSTALL_GUIDE.md  LOCAL_PRESERVATION_CHECKLIST.md  MEMORY.md  NEXT_STEPS.md  SKILLS_AGENTS_MERGE_REPORT.md  SYSTEM_SUMMARY.md  TEST_REPORT.md  TOOLS.md  USER.md  WEEK1_PLAN.md  aios.db  aios_standalone_demo.py  analyze_events.js  analyze_events.py  analyze_other_errors.py  analyze_task_exec.py  analyze_third_audio.py  archive_files.ps1  backup_incremental.ps1  check_aios_size.py  check_crit.py  check_file_encoding.py  check_file_encoding.py.bak  check_playbook.py  classify_errors.py  cleanup.ps1  (+65 more)
aios/: .coverage  .gitignore  AIOS-20260307.spec  AIOS-Full-20260307.spec  API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_V05.md  ARENA_GUIDE.md  BLOG_POST.md  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  DATA_MODELS.md  DEMO_SCRIPT.md  DOCKER_GUIDE.md  DOCUMENTATION.md  Dockerfile  EXAMPLES.md  FRONTEND_REQUIREMENTS.md  GITHUB_ACTIONS_SETUP.md  GITHUB_RELEASE.md  IMPROVEMENT_REPORT.md  LEARNING_WORKFLOW.md  MACOS_SETUP.md  OBSERVATION_PERIOD.md  OPTIMIZATION_REPORT.md  PACKAGING.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_TEST.md  RELEASE_NOTES.md  RESOURCE_DECISION_LAYER.md  ROADMAP.md  ROADMAP_v2.md  SECURITY.md  SKILL_INTEGRATION.md  SMART_UPGRADE.md  STARTUP_CONFIG.md  (+95 more)
aios/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
aios/agent_system/: AGENT_INTERVIEW_ANALYSIS.md  AGENT_MARKET_DESIGN.md  AGENT_STATUS_CLASSIFICATION_v1.0.md  ARCHITECTURE_STATE_EXECUTION_BOUNDARY.md  AUDIT_CHECKLIST.md  AUTO_START_GUIDE.md  BUG_HUNTER_NEVER_EXECUTED_ROOT_CAUSE_2026-03-10.md  CHANGELOG.md  CHANGELOG_2026-02-26.md  CRON_SETUP.md  CRON_SETUP_GUIDE.md  D7_DAY3_CHECKLIST.md  D7_PLAN.md  D7_WEEK1_CHECKLIST.md  DAY4_STEP5_SUMMARY.md  DAY_6_7_COMPLETION_REPORT.md  DAY_6_7_SUMMARY.md  DOCS_AGENT_OPTIMIZATION_PLAN_2026-03-11.md  ENCODING_FIX.md  (+595 more)
autolearn/: API.md  CHANGELOG.md  README.md  __init__.py  __main__.py  aram.py  cli.py  inbox.md  playbook.md  proposals.md  pyproject.toml
(+1532 files in other folders)
