[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-framework"
version = "0.5.0"
description = "Memory-driven, self-healing, production-ready AI agent framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Shanhuhai"}
]
keywords = ["ai", "agent", "framework", "self-learning", "autonomous", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yangfei222666-9/aios"
Repository = "https://github.com/yangfei222666-9/aios"
Issues = "https://github.com/yangfei222666-9/aios/issues"

[project.scripts]
aios = "aios.__main__:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"*" = [
    "config.yaml",
    "data/*.json",
    "data/*.jsonl",
    "dashboard/templates/*.html",
    "dashboard/static/*.css",
    "dashboard/static/*.js",
]
