[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autolearn"
version = "1.0.0"
description = "OpenClaw Self-Learning System — error→signature→lesson→retest loop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
autolearn = "autolearn.cli:main"

[tool.setuptools.packages.find]
include = ["autolearn*"]
